# Changelog

## 17.3.1

* handle vfstab extensions

## 17.3.0

* First release